<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SingleMadBrain</string>
    <string name="action_settings">Settings</string>
    <string name="memorying">Start memory&#8230;</string>
    <string name="playing_voice">Start playing a sound&#8230;</string>
    <string name="rememorying">start to recall&#8230;</string>
    <string name="exit_competition">Quit the game</string>
    <string name="end_memory">end\nmemory</string>
    <string name="commit_answer">commit\nanswer</string>
    <string name="change_bg">change background color</string>
    <string name="time_end">time is end！</string>
    <string name="fillout_gird_end">You already fill all the questions！</string>
    <string name="keyboard_vibrate">Keyboard shock</string>
    <string name="delete">delete</string>
    <string name="goto_top">back to top</string>
    <string name="delete_all_number">You already remove all number！</string>
    <string name="listen_first_round">the first round</string>
    <string name="listen_second_round">the second round</string>
    <string name="listen_third_round">the third round</string>
    <string name="listen_number_describe">Questions for the second English player a digital audio file. Before starting to read question, will first play A-B-C. After the end of the A-B-C play, I began to read the official figures. For example, 1,5,4,8 and so on.</string>
    <string name="last_line">This is the last line！</string>
    <string name="first_line">This is the first line！</string>
    <string name="login_title">Mad brain, your brain once again wide open</string>
    <string name="input_name">please enter your name</string>
    <string name="input_pwd">please enter your password</string>
    <string name="new_user_str">New User Registration</string>
    <string name="forget_password_str">forget password</string>
    <string name="select_nationality">Please select your nationality</string>
    <string name="select_birth_date">Please select your date of birth</string>
    <string name="contact_way">Please fill in your contact details</string>
    <string name="set_pwd">set password</string>
    <string name="set_new_pwd">Make sure the new password</string>
    <string name="confirm_modify">save the modified information</string>
    <string name="register_sex">Please select your gender</string>
    <string name="name">nickname:</string>
    <string name="address">address:</string>
    <string name="phone">cellphone number:</string>
    <string name="school">school:</string>
    <string name="nationality">nationality:</string>
    <string name="email">email:</string>
    <string name="address_hint">New York</string>
    <string name="school_hint">ColumbiaUniversity</string>
    <string name="nationality_hint">United States</string>
    <string name="phone_hint">13142547841</string>
    <string name="email_hint">13142547841@gmail.com</string>
    <string name="personal_info">personal information</string>
    <string name="personal_authentication">real-name certification </string>
    <string name="personal_record">historical results</string>
    <string name="personal_favorite">concern information</string>
    <string name="personal_wallet">My wallet</string>
    <string name="personal_msg">apply game</string>
    <string name="personal_setting">setting center</string>
    <string name="save">sava data</string>
    <string name="personal_center">Personal Center</string>
    <string name="game_center">Match Center</string>
    <string name="back">back</string>
    <string name="next_step">next</string>
    <string name="personal_select_identity">Identity Select</string>
    <string name="personal_authentication_info">identification infomation</string>
    <string name="personal_info_upload">upload identification information</string>
    <string name="personal_info_commit">submit identification information</string>
    <string name="confirm_commit">confirm submission</string>
    <string name="broken_line_graph">curve graphics</string>
    <string name="table_graph">Game mode</string>
    <string name="clear">clear</string>
    <string name="my_follow">list of attention</string>
    <string name="confirm">confirm</string>
    <string name="men">male</string>
    <string name="women">female</string>
    <string name="player">player</string>
    <string name="coach">coach</string>
    <string name="judge">judge</string>
    <string name="select_sex">please select a gender:</string>
    <string name="user_type">user category:</string>
    <string name="read_name">real name:</string>
    <string name="read_name_hint">Christian·Bella</string>
    <string name="identity_number">identity ID:</string>
    <string name="identity_number_hint">255800002</string>
    <string name="date_birth">birthday:</string>
    <string name="date_birth_hint">1990-12-20</string>
    <string name="grade_certificate">%srating certificate:</string>
    <string name="identity_picture">identity Id phone:</string>
    <string name="positive_photo">front photo</string>
    <string name="negative_photo">back phone</string>
    <string name="confirm_sure">confirm\ncommit</string>
    <string name="system_setting">system setting</string>
    <string name="about_us">about us</string>
    <string name="suggestion_feedback">feedback</string>
    <string name="exit_app">exit application</string>
    <string name="pay_pwd">payment password</string>
    <string name="login_pwd">login password</string>
    <string name="set_answertime">game set answer time</string>
    <string name="set_memorytime">game set memory time</string>
    <string name="set_rule">Rule Settings</string>
    <string name="set_time">Settings</string>
    <string name="ranking_list">Ranking list</string>
    <string name="commit">commit</string>
    <string name="mad_crazy_describe"> \t\t\t World Memory Championships Tony Buzan in 1991,initiated by the "father of the Memory of the World"
        By the World Memory Sports Commission (WMSC) organization of the world\'s highest level of memory events.\n\t\t\t World Memory Championships and awarded the internationally recognized world-wide,"Memory of the World Master" certificate,
         Competition world record credited directly to the Guinness world record without review. The event organized by the British prince mentor "Mr.world brain" Tony Buzan and Raymond Keene launched,has been in the United Kingdom,the United States,
         Germany, Mexico, Singapore and China and other countries successfully held 23 sessions, a strong impetus to the development of the mental world of sports business, and promote the exchange of achievements to promote mental sport in the world.
         By the World Council authorized mental sport,2015 World Memory Championships bid to host the twenty-fourth have settled in China.\n Race sponsor
        \n\t\t\t Tony Buzan was born in London in 1942, graduated from the University of British Columbia, has a variety of degree in psychology and English linguistics, mathematics and general science.He is by far the "Mensa High IQ Society" and "creative intelligence"
         Highest record holder; two dozen books that he published the brain has been translated into dozens of languages and published in more than 50 countries on five continents,and become the world\'s top companies advanced training Required Textbook .
        In addition, he also served a number of government departments, universities and research institutes and large multinational company consultants, including International Business Machines Corporation (IBM), Barclays International, Inc., Digital Equipment Corp., HP and other companies.
        He presided over the brain lectures has become a household name in the West show,popular on the radio,satellite TV and a variety of media,including video programs including. Insiders are dubbed him "Mr. Brain."</string>
    <string name="suggest_hint">please enter your comments</string>
    <string name="suggest_content_empty">Comments submitted content is empty！！</string>
    <string name="modify_login_pwd">Change Password</string>
    <string name="origin_pwd">original password</string>
    <string name="set_new_login_pwd">set a new password</string>
    <string name="modify_pay_pwd">modify payment password</string>
    <string name="please_fill_full_info">Please complete the information！！</string>
    <string name="origin_pwd_nomatch">The original password does not match！！</string>
    <string name="different_pwd">Two times the password is not consistent！！</string>
    <string name="text_record">Historical results</string>
    <string name="city_game">city game</string>
    <string name="world_game">world game</string>
    <string name="china_game">china game</string>
    <string name="search">search</string>
    <string name="hint_end_data">2016/06/21</string>
    <string name="hint_begin_data">2016/05/22</string>
    <string name="time">time:</string>
    <string name="record_data_empty_note">Please fill in the search date！</string>
    <string name="record_data_format_note">Please fill in the search date！\nformat：2016/06/21</string>
    <string name="end_date_error">End date must be greater than start date！</string>
    <string name="competition_date">\tMatch date</string>
    <string name="competition_date1">Match date</string>
    <string name="competition_time">\tMatch time</string>
    <string name="competition_time1">Match time</string>
    <string name="apply_cost">\tapply fee</string>
    <string name="apply_cost1">apply fee</string>
    <string name="my_apply">apply game</string>
    <string name="applied">already registered</string>
    <string name="project_1">Name head memory</string>
    <string name="project_2">Binary number</string>
    <string name="project_3">Marathon number</string>
    <string name="project_4">Abstract graphics</string>
    <string name="project_5">Fast random numbers</string>
    <string name="project_6">Virtual events dates</string>
    <string name="project_7">Marathon poker memory</string>
    <string name="project_8">Random words memory</string>
    <string name="project_9">Listen remember digit</string>
    <string name="project_10">Fast poker memory</string>
    <string name="message_city">city game</string>
    <string name="message_china">china game</string>
    <string name="message_world">world game</string>
    <string name="str_back">back</string>
    <string name="jump_over"> jump over</string>
    <string name="action_rule">competition rules</string>
    <string name="str_apply">Race registration</string>
    <string name="str_exercise">Practice mode</string>
    <string name="memory">memory：</string>
    <string name="recall">recall：</string>
    <string name="num">number of times：</string>
    <string name="target">target：</string>
    <string name="recalling">recalling...</string>
    <string name="jf_function">Integration method</string>
    <string name="memory_part">Memory section</string>
    <string name="recall_part">Recall part</string>
    <string name="attention">attention ：</string>
    <string name="next">bout</string>
    <string name="project_name">project name</string>
    <string name="race_mode">Game mode</string>
    <string name="race_date">match date</string>
    <string name="race_time">match time</string>
    <string name="race_pay">competition cost</string>
    <string name="person_entry_fee">play sign up</string>
    <string name="not_news_data">No data... click load</string>
    <string name="site_name">project name</string>
    <string name="site_mode">model</string>
    <string name="site_num">match time</string>
    <string name="site_time">memory time</string>
    <string name="recall_time">recall time</string>
    <string name="score">Score</string>
    <string name="ranking">My rank：</string>
</resources>