<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical">    <LinearLayout        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_gravity="center_horizontal"        android:background="@drawable/personal_common_bottom_bg"        android:gravity="center_horizontal"        android:orientation="vertical"        android:paddingBottom="20dp"        android:paddingLeft="80dp"        android:paddingRight="80dp"        android:paddingTop="20dp">        <LinearLayout style="@style/PersonalFrgInfoLinearLayout">            <TextView                style="@style/PersonalFrgInfoText"                android:drawableLeft="@drawable/personal_frg_info_name"                android:text="@string/name" />            <EditText                style="@style/PersonalFrgInfoEdit"                android:hint="Lisa OR 丽莎奥那" />        </LinearLayout>        <LinearLayout style="@style/PersonalFrgInfoLinearLayout">            <TextView                style="@style/PersonalFrgInfoText"                android:drawableLeft="@drawable/personal_frg_info_address"                android:text="@string/address" />            <EditText                style="@style/PersonalFrgInfoEdit"                android:hint="@string/address_hint" />        </LinearLayout>        <LinearLayout style="@style/PersonalFrgInfoLinearLayout">            <TextView                style="@style/PersonalFrgInfoText"                android:drawableLeft="@drawable/personal_frg_info_school"                android:text="@string/school" />            <EditText                style="@style/PersonalFrgInfoEdit"                android:hint="@string/school_hint" />        </LinearLayout>        <LinearLayout style="@style/PersonalFrgInfoLinearLayout">            <TextView                style="@style/PersonalFrgInfoText"                android:drawableLeft="@drawable/personal_frg_info_nationality"                android:text="@string/nationality" />            <EditText                style="@style/PersonalFrgInfoEdit"                android:hint="@string/nationality_hint" />        </LinearLayout>        <LinearLayout style="@style/PersonalFrgInfoLinearLayout">            <TextView                style="@style/PersonalFrgInfoText"                android:drawableLeft="@drawable/personal_frg_info_phone"                android:text="@string/phone" />            <EditText                style="@style/PersonalFrgInfoEdit"                android:hint="@string/phone_hint" />        </LinearLayout>        <LinearLayout style="@style/PersonalFrgInfoLinearLayout">            <TextView                style="@style/PersonalFrgInfoText"                android:drawableLeft="@drawable/personal_frg_info_email"                android:text="@string/email" />            <EditText                style="@style/PersonalFrgInfoEdit"                android:hint="@string/email_hint" />        </LinearLayout>        <Button            android:id="@+id/personal_info_btn_save"            android:layout_width="90dp"            android:layout_height="36dp"            android:layout_margin="8dp"            android:background="@color/personal_item_selected"            android:gravity="center"            android:text="@string/save"            android:textColor="@color/white"            android:textSize="@dimen/person_text_age_s" />    </LinearLayout></LinearLayout>