<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:id="@+id/layout_step2"    android:layout_width="wrap_content"    android:layout_height="wrap_content"    android:orientation="vertical">    <LinearLayout style="@style/PersonalFrgInfoLinearLayout">        <TextView            style="@style/PersonalFrgInfoText"            android:text="@string/read_name"            android:textColor="@color/personal_authentication_text_step" />        <EditText            android:id="@+id/ed_name"            style="@style/PersonalFrgInfoEdit"            android:hint="@string/read_name_hint" />    </LinearLayout>    <LinearLayout style="@style/PersonalFrgInfoLinearLayout">        <TextView            style="@style/PersonalFrgInfoText"            android:text="@string/identity_number"            android:textColor="@color/personal_authentication_text_step" />        <EditText            android:id="@+id/ed_id"            style="@style/PersonalFrgInfoEdit"            android:hint="@string/identity_number_hint" />    </LinearLayout>    <LinearLayout style="@style/PersonalFrgInfoLinearLayout">        <TextView            style="@style/PersonalFrgInfoText"            android:text="@string/date_birth"            android:textColor="@color/personal_authentication_text_step" />        <EditText            android:id="@+id/ed_data"            style="@style/PersonalFrgInfoEdit"            android:hint="@string/date_birth_hint" />    </LinearLayout></LinearLayout>