<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/newlist_title"
        android:background="@color/red"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/common_text_24"
            android:text="@string/project_name"
            android:textColor="@color/white"

            />
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_text_24"
            android:text="@string/race_mode"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_text_24"
            android:text="@string/race_date"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_text_24"
            android:text="@string/race_time"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_text_24"
            android:text="@string/race_pay"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_text_24"
            android:text="@string/person_entry_fee"
            android:textColor="@color/white"
            android:gravity="center"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_load_error_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/not_news_data"
        android:textColor="@color/text_gray_hint"
        android:textSize="@dimen/common_text_24"
        android:visibility="gone" />


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_newcompetition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/listview_compitition_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/new_competition_bg" />
    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>
