<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical">    <RelativeLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginBottom="@dimen/radius_4dip"        android:layout_marginLeft="@dimen/common_lf_margin"        android:layout_marginRight="@dimen/common_lf_margin"        android:layout_marginTop="@dimen/radius_4dip">        <TextView            android:id="@+id/text_history_record"            android:layout_width="90dp"            android:layout_height="wrap_content"            android:layout_alignParentLeft="true"            android:layout_centerVertical="true"            android:drawableBottom="@drawable/black_line"            android:gravity="center"            android:text="@string/text_record"            android:textColor="@color/personal_setting_text"            android:textSize="@dimen/common_text_22" />        <TextView            android:id="@+id/text_record_city"            style="@style/PersonalFrgRecordText"            android:layout_marginLeft="@dimen/main_lf_image_wh"            android:layout_toRightOf="@id/text_history_record"            android:drawableLeft="@drawable/personal_record_city"            android:text="@string/city_game"            android:textColor="@color/record_city" />        <TextView            android:id="@+id/text_record_world"            style="@style/PersonalFrgRecordText"            android:layout_alignTop="@id/text_record_city"            android:layout_marginLeft="@dimen/margin_10dip"            android:layout_toRightOf="@id/text_record_city"            android:drawableLeft="@drawable/personal_record_world"            android:text="@string/world_game"            android:textColor="@color/red" />        <TextView            android:id="@+id/text_record_china"            style="@style/PersonalFrgRecordText"            android:layout_alignLeft="@id/text_record_city"            android:layout_below="@id/text_record_city"            android:drawableLeft="@drawable/personal_record_china"            android:text="@string/china_game"            android:textColor="@color/record_china" />        <Button            android:id="@+id/record_text_search"            style="@style/PersonalFrgRecordBtn"            android:layout_alignParentRight="true"            android:layout_centerVertical="true"            android:background="@drawable/personal_frg_record_search"            android:text="@string/search"            android:textColor="#286AC3" />        <Button            android:id="@+id/record_text_delete"            style="@style/PersonalFrgRecordBtn"            android:layout_centerVertical="true"            android:layout_marginRight="@dimen/common_lf_margin"            android:layout_toLeftOf="@id/record_text_search"            android:background="@drawable/personal_frg_record_delete"            android:text="@string/delete"            android:textColor="#FF0D0D" />        <EditText            android:id="@+id/record_search_end_data"            style="@style/PersonalFrgRecordEdit"            android:layout_centerVertical="true"            android:layout_marginRight="@dimen/main_lf_padding"            android:layout_toLeftOf="@id/record_text_delete"            android:text="@string/hint_end_data" />        <View            android:id="@+id/record_search_data_divide"            android:layout_width="@dimen/login_margin_top"            android:layout_height="@dimen/margin_1dp"            android:layout_centerVertical="true"            android:layout_margin="@dimen/radius_4dip"            android:layout_toLeftOf="@id/record_search_end_data"            android:background="@drawable/black_line" />        <EditText            android:id="@+id/record_search_begin_data"            style="@style/PersonalFrgRecordEdit"            android:layout_centerVertical="true"            android:layout_toLeftOf="@id/record_search_data_divide"            android:text="@string/hint_begin_data" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerVertical="true"            android:layout_margin="@dimen/radius_4dip"            android:layout_toLeftOf="@id/record_search_begin_data"            android:text="@string/time"            android:textColor="@color/personal_setting_text"            android:textSize="@dimen/person_text_age_s" />    </RelativeLayout>    <RelativeLayout        android:id="@+id/record_histogram_container"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout_margin="@dimen/common_lf_margin"></RelativeLayout></LinearLayout>