<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:id="@+id/authentication_frg_layout"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_margin="@dimen/binary_line_layout_padding"        android:gravity="center"        android:orientation="horizontal">        <TextView            style="@style/PersonalAuthenticationStepText"            android:drawableLeft="@drawable/personal_authentication_step1"            android:text="@string/personal_select_identity"            android:textColor="#1C11BE" />        <View            android:layout_width="@dimen/personal_authentication_step_line_w"            android:layout_height="@dimen/margin_1dp"            android:background="@drawable/personal_authentication_step_line1" />        <TextView            android:id="@+id/text_step2"            style="@style/PersonalAuthenticationStepText"            android:drawableLeft="@drawable/personal_authentication_step2_bg"            android:text="@string/personal_authentication_info" />        <View            android:id="@+id/line_step2"            android:layout_width="@dimen/personal_authentication_step_line_w"            android:layout_height="@dimen/margin_1dp"            android:background="@drawable/personal_item_divide_line" />        <TextView            android:id="@+id/text_step3"            style="@style/PersonalAuthenticationStepText"            android:drawableLeft="@drawable/personal_authentication_step3_bg"            android:text="@string/personal_info_upload" />        <View            android:id="@+id/line_step3"            android:layout_width="@dimen/personal_authentication_step_line_w"            android:layout_height="@dimen/margin_1dp"            android:background="@drawable/personal_item_divide_line" />        <TextView            android:id="@+id/text_step4"            style="@style/PersonalAuthenticationStepText"            android:drawableLeft="@drawable/personal_authentication_step4_bg"            android:text="@string/personal_info_commit" />    </LinearLayout>    <RelativeLayout        android:id="@+id/layout_step123_parent"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:padding="@dimen/radius_4dip">        <LinearLayout            android:id="@+id/layout_step1"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerHorizontal="true"            android:orientation="vertical">            <LinearLayout                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_margin="@dimen/margin_10dip"                android:orientation="horizontal">                <TextView                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginRight="@dimen/margin_10dip"                    android:text="@string/select_sex"                    android:textColor="@color/personal_authentication_text_step"                    android:textSize="@dimen/text_size_18" />                <TextView                    android:id="@+id/radio_men"                    style="@style/PersonalAuthenticationTextType"                    android:drawableLeft="@drawable/personal_men_bg"                    android:text="@string/men" />                <TextView                    android:id="@+id/radio_women"                    style="@style/PersonalAuthenticationTextType"                    android:drawableLeft="@drawable/personal_women_bg"                    android:text="@string/women" />            </LinearLayout>            <LinearLayout                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_margin="@dimen/margin_10dip"                android:gravity="center_vertical"                android:orientation="horizontal">                <TextView                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginRight="@dimen/margin_10dip"                    android:text="@string/user_type"                    android:textColor="@color/personal_authentication_text_step"                    android:textSize="@dimen/text_size_18" />                <TextView                    android:id="@+id/radio_player"                    style="@style/PersonalAuthenticationTextType"                    android:layout_marginRight="7dp"                    android:drawableLeft="@drawable/personal_player_bg"                    android:text="@string/player" />                <TextView                    android:id="@+id/radio_coach"                    style="@style/PersonalAuthenticationTextType"                    android:layout_marginRight="7dp"                    android:drawableLeft="@drawable/personal_coach_bg"                    android:text="@string/coach" />                <TextView                    android:id="@+id/radio_judge"                    style="@style/PersonalAuthenticationTextType"                    android:drawableLeft="@drawable/personal_judge_bg"                    android:text="@string/judge" />            </LinearLayout>        </LinearLayout>        <ViewStub            android:id="@+id/view_shade_step2"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerHorizontal="true"            android:layout="@layout/personal_frg_authentication_step2" />        <ViewStub            android:id="@+id/view_shade_step3"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerHorizontal="true"            android:layout="@layout/personal_frg_authentication_step3" />        <Button            android:id="@+id/next_step"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/layout_step1"            android:layout_centerHorizontal="true"            android:layout_marginTop="@dimen/login_margin_top"            android:background="@drawable/personal_authentication_next_step"            android:gravity="center"            android:text="@string/next_step"            android:textColor="@color/white"            android:textSize="@dimen/common_text_22" />    </RelativeLayout>    <ViewStub        android:id="@+id/view_shade_step4"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout="@layout/personal_frg_authentication_step4" /></LinearLayout>