<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/ll_competition_title"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:background="@drawable/yj_competition_title_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/message_title_city"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/message_city"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:src="@color/white" />

        <TextView
            android:id="@+id/message_title_china"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/message_china" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:src="@color/white" />

        <TextView
            android:id="@+id/message_title_world"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/message_world" />
    </LinearLayout>

</RelativeLayout>